--- a/guides/using-transform-data.mdx
+++ b/guides/using-transform-data.mdx
@@ -7,7 +7,7 @@ title: "AI Editing with User Transformations"
 Dromo's Transform Data feature allows your users to create bulk transformations from natural language and execute them on the dataset. The feature is available on the Pro plan.
 
 <Check>
-  Enable Transform Data with the [`reviewStep.enableUserTransformations` setting](/settings#enableusertransformations).
+  Enable Transform Data with the [`reviewStep.enableUserTransformations` setting](/reference/settings/settings#enableusertransformations).
 </Check>
 
 With `enableUserTransformations` enabled, you will see a "Transform Data" button on the Data Review step.
