--- a/index.mdx
+++ b/index.mdx
@@ -44,7 +44,7 @@ Get up and running with Dromo in minutes. Choose the integration that works best
     Specify the fields you want to import using our [Schema Builder](/guides/schema-builder) or define them programmatically with our SDKs.
   </Step>
   <Step title="Add Validations">
-    Configure [validation rules](/fields) and [transformation hooks](/hooks) to ensure data quality and provide real-time feedback.
+    Configure [validation rules](/fields) and [transformation hooks](/reference/hooks) to ensure data quality and provide real-time feedback.
   </Step>
   <Step title="Handle Results">
     Receive clean, validated JSON data that's ready to use in your application or database.
@@ -74,3 +74,5 @@ Get up and running with Dromo in minutes. Choose the integration that works best
 <Note>
   **Questions?** Chat with us anytime using the chat bubble, or email us at [support@dromo.io](mailto:support@dromo.io).
 </Note>
+
+For more information on hooks, see the [Hooks](/reference/hooks) documentation.
