--- a/reference/fields/fields.mdx
+++ b/reference/fields/fields.mdx
@@ -98,7 +98,7 @@ And, when submitted, Dromo would provide you with a result data array like this:
   * As a string corresponding to a valid field type. If the field type accepts options, defaults will be used.
   * For field types which accept options, as a two element array where the first element is the string corresponding to a valid field type, and the second element is an object with type options.
 
-  For more details, see [field types](/fields/field-types).
+  For more details, see [field types](/reference/fields/field-types).
 </ResponseField>
 
 <ResponseField name="description" type="string">
