--- a/reference/settings/settings.mdx
+++ b/reference/settings/settings.mdx
@@ -60,7 +60,7 @@ Dromo uses industry-standard best practices to secure your data on our servers.
 <ResponseField name="webhookUrl" type="string" default="null">
   Requires [backendSyncMode](#backendsyncmode) = "FULL_DATA"
 
-  This is a URL that is called upon the completion of a successful upload through Dromo. Note: `backendSync` needs to be set to `true` for this to work. From more details see [Webhooks](/webhooks).
+  This is a URL that is called upon the completion of a successful upload through Dromo. Note: `backendSync` needs to be set to `true` for this to work. For more information on webhooks, see the [Webhooks](/reference/webhooks) documentation.
 </ResponseField>
 
 <ResponseField name="allowCustomFields" type="boolean" default="false">
