--- a/guides/using-row-hooks.mdx
+++ b/guides/using-row-hooks.mdx
@@ -4,9 +4,7 @@ title: "Validating with External Data"
 
 The following example demonstrates how to use row hooks to validate data against an external API.
 
-<Info>
-  For more detail about row hooks, see the [Reference](/hooks#row-hooks) page
-</Info>
+For more information on row hooks, see the [Row Hooks](/reference/hooks#row-hooks) documentation.
 
 Although it's not required to use `async`/`await` with hooks, we recommend you use it with an external API call.
 
@@ -18,7 +16,6 @@ export const fields = [
     key: 'email'
   }
 ];
-...
 
 let hasFetchedData = false;
 let serverResults;
