--- a/guides/using-addField.mdx
+++ b/guides/using-addField.mdx
@@ -5,7 +5,7 @@ title: "Concatenating and Splitting Fields"
 This guide demonstrates how to use step hooks to add or remove fields midway through an import.
 
 <Info>
-  For more information on the `instance.addField` method, see the [Hooks](/reference/hooks#instanceaddfield) documentation. For more information on the `instance.removeField` method, see the [Hooks](/reference/hooks#instanceremovefield) documentation.
+  For more information on the `instance.addField` method, see the [Reference](/reference/hooks#instanceaddfield) documentation. For more information on the `instance.removeField` method, see the [Reference](/reference/hooks#instanceremovefield) documentation.
 </Info>
 
 <CodeGroup>
