some halluciantion clean up

--- a/guides/using-row-hooks.mdx
+++ b/guides/using-row-hooks.mdx
@@ -4,7 +4,9 @@ title: "Validating with External Data"
 
 The following example demonstrates how to use row hooks to validate data against an external API.
 
-For more information on row hooks, see the [Row Hooks](/reference/hooks#row-hooks) documentation.
+<Info>
+  For more information on row hooks, see the [Row Hooks](/reference/hooks#row-hooks) documentation.
+</Info>
 
 Although it's not required to use `async`/`await` with hooks, we recommend you use it with an external API call.
 
