--- a/guides/handling-results.mdx
+++ b/guides/handling-results.mdx
@@ -3,7 +3,7 @@ title: "Handling results"
 ---
 
 <Info>
-  For more information on the onResults callback, see the [OnResults Callback](/reference/results#the-onresults-callback) documentation.
+  For more information on the onResults callback, see the [Reference](/reference/results#the-onresults-callback) documentation.
 </Info>
 
 Here we show how to handle results directly in the browser, using Google Firebase as an example (unlike an RDBMS like Postgres, Firebase allows for direct browser connections). To handle results on a server, either send the `onResults` data to an API you control or subscribe to a [webhook](/reference/webhooks).
@@ -42,5 +42,3 @@ dromo.onResults(function (data) {
 });
 ```
 </CodeGroup>
-
-For more information on webhooks, see the [Webhooks](/reference/webhooks) documentation.
