--- a/guides/using-beforeFinish.mdx
+++ b/guides/using-beforeFinish.mdx
@@ -7,7 +7,7 @@ Row hooks are great for validating a single row, but what if you want to validat
 This function will run every time the user clicks the "Finish" button. If it returns an object with the `cancel` property set to `true`, the user will be reverted to the data review screen, and the `message` will be displayed as a table-level error.
 
 <Info>
-  For more information on the beforeFinish callback, see the [BeforeFinish Callback](/reference/results#the-beforefinish-callback) documentation.
+  For more information on the beforeFinish callback, see the [Reference](/reference/results#the-beforefinish-callback) documentation.
 </Info>
 
 <CodeGroup>
