Fix navigation urls

--- a/guides/using-addField.mdx
+++ b/guides/using-addField.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Concatenating and Splitting Fields"
+title: "Concatenating and Splitting Fields via addField"
 ---
 
 This guide demonstrates how to use step hooks to add or remove fields midway through an import.
