--- a/welcome.mdx
+++ b/welcome.mdx
@@ -60,13 +60,7 @@ Get up and running with Dromo in minutes. Choose the integration that works best
   <Card title="Interactive Sandbox" icon="laptop-code" href="https://codesandbox.io/s/ux-demo-react-yez5e2">
     Explore a fully customized Dromo implementation
   </Card>
-  <Card title="API Documentation" icon="book-open" href="/api-reference">
-    Dive into our comprehensive API reference
-  </Card>
-  <Card title="Join Community" icon="users" href="https://discord.gg/dromo">
-    Connect with other developers building with Dromo
-  </Card>
-  <Card title="Get Help" icon="life-ring" href="mailto:contact@dromo.io">
+  <Card title="Get Help" icon="life-ring" href="mailto:support@dromo.io">
     Our team is here to help you succeed
   </Card>
 </CardGroup>
